# Added sub-commands in deepify

--- a/src/hooks/deepify_comp.sh.twig
+++ b/src/hooks/deepify_comp.sh.twig
@@ -1,5 +1,5 @@
 {{ '#' }}!/usr/bin/env bash
-{{ '#' }} Created on {{ {{ 'now'|date('m/d/Y h:i:s A') }} }}
+{{ '#' }} Created on {{ 'now'|date('m/d/Y h:i:s A') }}
 __deepify_comp() {
     local PREV_WORD
     local CUR_WORD
