--- a/src/hooks/deepify_comp.sh.twig
+++ b/src/hooks/deepify_comp.sh.twig
@@ -1,6 +1,8 @@
 {{ '#' }}!/usr/bin/env bash
 {{ '#' }} Created on {{ 'now'|date('m/d/Y h:i:s A') }}
 __deepify_comp() {
+    local CUR_WORD
+
     CUR_WORD="${COMP_WORDS[COMP_CWORD]}"
 
     {% import _self as this %}
