Implement local elasticsearch client (#179)
* # Move `babel-cli` as a `deepify` dependency

* Fix -- autocomplete

* Revert autocomplete fix

* Fix -- autocomplete

* # Added --update to deepify compile dev

* # Fix --help duplicates

* # Implement ES for local-server

* # Fix local fs boot

* # Added async config dump in local backend

*  # Fixed lock handler

*  # Fixed .travis deps

*  # Fixed .travis deps

*  # Fixed .travis deps

*  # Fixed .travis deps

* # Added more CORS headers

* # Fix travis

* # sudo:true -> sudo:required

* # Code review fix

* Codacy Fix

* # Small changes

* # Remove unused parameter

--- a/src/hooks/deepify_comp.sh.twig
+++ b/src/hooks/deepify_comp.sh.twig
@@ -1,5 +1,5 @@
 {{ '#' }}!/usr/bin/env bash
-{{ '#' }} Created on {{ 'now'|date('m/d/Y h:i:s A') }}
+{{ '#' }} This script is autogenrated by deepify. DO NOT CHANGE IT MANUALLY!!!
 __deepify_comp() {
     local CUR_WORD
 
